Increase maximum number of subjects

--- a/about.html
+++ b/about.html
@@ -82,7 +82,9 @@
           <h2 class="date">2020.02.01</h2>
           <b>2020년 1학기 버전 공개</b> <br>
           <h2 class="date">2020.07.06</h2>
-          <b>무작위 수강신청 과목 수 추가</b>
+          <b>수강신청 과목 수 무작위화</b> <br>
+          <h2 class="date">2020.08.14</h2>
+          <b>최대 수강신청 과목 수 8개로 증가</b>
         </p>
       </section>
     </article>
