--- a/sugang/click.html
+++ b/sugang/click.html
@@ -266,7 +266,7 @@
                         </TR>
 
 
-                        <TR class="1" onMouseOver="this.style.backgroundColor='#E8F8F8';"
+                        <TR class="1 display-none" onMouseOver="this.style.backgroundColor='#E8F8F8';"
                           onMouseOut="this.style.backgroundColor='#FFFFFF';return true;" bgcolor='#FFFFFF' align=center
                           height=22>
                           <TD>190824</TD>
@@ -283,11 +283,11 @@
                           <TD style="color:blue"><b>미신청</b></TD>
                         </TR>
 
-                        <TR class="1">
+                        <TR class="1 display-none">
                           <TD colspan=12 bgcolor='8AAFCF'></TD>
                         </TR>
 
-                        <TR class="2" onMouseOver="this.style.backgroundColor='#E8F8F8';"
+                        <TR class="2 display-none" onMouseOver="this.style.backgroundColor='#E8F8F8';"
                           onMouseOut="this.style.backgroundColor='#FFFFFF';return true;" bgcolor='#FFFFFF' align=center
                           height=22>
                           <TD>000823</TD>
@@ -305,11 +305,11 @@
                         </TR>
 
 
-                        <TR class="2">
+                        <TR class="2 display-none">
                           <TD colspan=12 bgcolor='8AAFCF'></TD>
                         </TR>
 
-                        <TR class="3" onMouseOver="this.style.backgroundColor='#E8F8F8';"
+                        <TR class="3 display-none" onMouseOver="this.style.backgroundColor='#E8F8F8';"
                           onMouseOut="this.style.backgroundColor='#FFFFFF';return true;" bgcolor='#FFFFFF' align=center
                           height=22>
                           <TD>188285</TD>
@@ -326,11 +326,11 @@
                           <TD style="color:blue"><b>미신청</b></TD>
                         </TR>
 
-                        <TR class="3">
+                        <TR class="3 display-none">
                           <TD colspan=12 bgcolor='8AAFCF'></TD>
                         </TR>
 
-                        <TR class="4" onMouseOver="this.style.backgroundColor='#E8F8F8';"
+                        <TR class="4 display-none" onMouseOver="this.style.backgroundColor='#E8F8F8';"
                           onMouseOut="this.style.backgroundColor='#FFFFFF';return true;" bgcolor='#FFFFFF' align=center
                           height=22>
                           <TD>360128</TD>
@@ -347,11 +347,11 @@
                           <TD style="color:blue"><b>미신청</b></TD>
                         </TR>
 
-                        <TR class="4">
+                        <TR class="4 display-none">
                           <TD colspan=12 bgcolor='8AAFCF'></TD>
                         </TR>
 
-                        <TR class="5" onMouseOver="this.style.backgroundColor='#E8F8F8';"
+                        <TR class="5 display-none" onMouseOver="this.style.backgroundColor='#E8F8F8';"
                           onMouseOut="this.style.backgroundColor='#FFFFFF';return true;" bgcolor='#FFFFFF' align=center
                           height=22>
                           <TD>188261</TD>
@@ -368,11 +368,11 @@
                           <TD style="color:blue"><b>미신청</b></TD>
                         </TR>
 
-                        <TR class="5">
+                        <TR class="5 display-none">
                           <TD colspan=12 bgcolor='8AAFCF'></TD>
                         </TR>
 
-                        <TR class="6" onMouseOver="this.style.backgroundColor='#E8F8F8';"
+                        <TR class="6 display-none" onMouseOver="this.style.backgroundColor='#E8F8F8';"
                           onMouseOut="this.style.backgroundColor='#FFFFFF';return true;" bgcolor='#FFFFFF' align=center
                           height=22>
                           <TD>188282</TD>
@@ -389,15 +389,15 @@
                           <TD style="color:blue"><b>미신청</b></TD>
                         </TR>
 
-                        <TR class="6">
+                        <TR class="6 display-none">
                           <TD colspan=12 bgcolor='8AAFCF'></TD>
                         </TR>
 
-                        <TR class="7" onMouseOver="this.style.backgroundColor='#E8F8F8';"
+                        <TR class="7 display-none" onMouseOver="this.style.backgroundColor='#E8F8F8';"
                           onMouseOut="this.style.backgroundColor='#FFFFFF';return true;" bgcolor='#FFFFFF' align=center
                           height=22>
                           <TD>000831</TD>
-                          <TD>3</TD>
+                          <TD>2</TD>
                           <TD align=left style="color:black">명상1</TD>
                           <TD>교선</TD>
                           <TD></TD>
@@ -410,13 +410,34 @@
                           <TD style="color:blue"><b>미신청</b></TD>
                         </TR>
 
-                        <TR class="7">
+                        <TR class="7 display-none">
+                          <TD colspan=12 bgcolor='8AAFCF'></TD>
+                        </TR>
+
+                        <TR class="8 display-none" onMouseOver="this.style.backgroundColor='#E8F8F8';"
+                          onMouseOut="this.style.backgroundColor='#FFFFFF';return true;" bgcolor='#FFFFFF' align=center
+                          height=22>
+                          <TD>373628</TD>
+                          <TD>2</TD>
+                          <TD align=left style="color:black">시간표의이해</TD>
+                          <TD>교선</TD>
+                          <TD></TD>
+                          <TD>2</TD>
+                          <TD>기차표</TD>
+                          <TD>수45</TD>
+                          <TD>L0201</TD>
+                          <TD></TD>
+                          <TD>8</TD>
+                          <TD style="color:blue"><b>미신청</b></TD>
+                        </TR>
+
+                        <TR class="8 display-none">
                           <TD colspan=12 bgcolor='8AAFCF'></TD>
                         </TR>
 
                         <TR height=25 BGCOLOR=#DCEBF8>
                           <TD colspan=12 ALIGN=right>
-                            <b>現 신청 학점수 : 18학점 (6 과목, 사이버강좌 0 학점)</b>
+                            <b id="class-credits">現 신청 학점수 : 18학점 (6 과목, 사이버강좌 0 학점)</b>
                           </TD>
                         </TR>
 
