Add auto redirect

--- a/sugang/click.html
+++ b/sugang/click.html
@@ -5,11 +5,11 @@
   <meta charset="euc-kr">
   <title>수강신청 연습 - 홍익수강</title>
   <meta name="author" content="HongikSugang">
-  <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습">
+  <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습, 학교 지도">
   <meta name="theme-color" content="#C8AAE4">
   <meta property="og:type" content="website">
   <meta property="og:title" content="홍익수강">
-  <meta property="og:description" content="홍익대학교 수강신청 연습">
+  <meta property="og:description" content="홍익수강 - 홍익대학교 수강신청 연습, 학교 지도">
   <meta property="og:image" content="/image/hongiksugang.png">
   <meta property="og:url" content="https://hongiksugang.github.io">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
