--- a/map.html
+++ b/map.html
@@ -6,15 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>학교 지도 - 홍익수강</title>
   <meta name="author" content="HongikSugang">
-  <meta name="description" content="홍익수강">
+  <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습, 학교 지도">
   <meta name="theme-color" content="#C8AAE4">
   <meta property="og:type" content="website">
   <meta property="og:title" content="홍익수강">
-  <meta property="og:description" content="홍익대학교 지도">
+  <meta property="og:description" content="홍익수강 - 홍익대학교 수강신청 연습, 학교 지도">
   <meta property="og:image" content="/image/hongiksugang.png">
   <meta property="og:url" content="https://hongiksugang.github.io">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/cssjs/mainStyle.css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script data-ad-client="ca-pub-9909010355156782" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
