Add classroom link generator

--- a/index.html
+++ b/index.html
@@ -79,6 +79,17 @@
       </div>
       <div class="sectionBackground"></div>
     </section>
+    <section class="sectionWrapper">
+      <a href="/sleepMore" class="sectionLink"></a>
+      <div class="sectionInfo">
+        <header>
+          <h1 class="headline">강의실 바로가기 만들기</h1>
+          <h2 class="subhead"></h2>
+        </header>
+        <h5 class="sectionDate"></h5>
+      </div>
+      <div class="sectionBackground"></div>
+    </section>
   </main>
 </body>
 
