--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <a href="/sleepMore" class="sectionLink"></a>
       <div class="sectionInfo">
         <header>
-          <h1 class="headline">강의실 바로가기 만들기</h1>
+          <h1 class="headline">강의실 바로가기</h1>
           <h2 class="subhead"></h2>
         </header>
         <h5 class="sectionDate"></h5>
