--- a/sleepMore/index.html
+++ b/sleepMore/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - 홍익수강</title>
+  <title>강의실 바로가기 - 홍익수강</title>
   <meta name="author" content="HongikSugang">
   <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습, 학교 지도" class="del">
   <meta name="theme-color" content="#C8AAE4">
@@ -17,44 +17,44 @@
   <link rel="stylesheet" href="/cssjs/mainStyle.css" class="del">
   <link rel="stylesheet" href="/cssjs/sleepMore.css" class="del">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet" class="del">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script data-ad-client="ca-pub-9909010355156782" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" class="del"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1" class="del"></script>
-  <script defer src="/cssjs/mainApp.js" class="del"></script>
-  <script defer src="/cssjs/sleepMore.js" class="del"></script>
-  <script class="del">
+  <script data-ad-client="ca-pub-9909010355156782" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
+  <script defer src="/cssjs/mainApp.js"></script>
+  <script defer src="/cssjs/sleepMore.js"></script>
+  <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'UA-146466073-1');
   </script>
   <style>
-    * {
+    body {
+      margin: 0;
       -webkit-user-select: none;
       -moz-user-select: none;
       -ms-user-select: none;
       user-select: none;
     }
-    #hl {
+    #headline {
       color: #a366d3;
       font-size: 3rem;
+      word-break: keep-all;
       text-align: center;
       margin: 50px;
     }
-    .generated-link {
+    .link {
       display: inline-block;
       margin: 20px 40px;
       font-size: 2rem;
       text-decoration: none;
-      color: #080808;
+      color: #131313;
     }
   </style>
 </head>
 
 <body>
-  <input type="checkbox" id="toggleMenu">
-  <nav id="topNav">
+  <input type="checkbox" id="toggleMenu" class="del">
+  <nav id="topNav" class="del">
     <a href="/" id="logo"></a>
     <label id="toggleSidebar" for="toggleMenu">
       <span class="wrap"><span class="line"></span></span>
@@ -62,7 +62,7 @@
     </label>
   </nav>
 
-  <aside id="sidebar">
+  <aside id="sidebar" class="del">
     <nav id="sideNav">
       <ul id="sidebarMenu">
         <li><a href="/map">Map</a></li>
@@ -74,20 +74,20 @@
       © 2019-2020 HongikSugang<br>
     </footer>
   </aside>
-  <div id="sideOverlay"></div>
+  <div id="sideOverlay" class="del"></div>
 
   <main>
     <article>
       <div id="articleInfo">
         <header>
-          <h1 id="headline">강의실 바로가기 만들기</h1>
+          <h1 id="headline">강의실 바로가기</h1>
         </header>
-        <div id="AboutImage" style="
+        <div id="AboutImage" class="del" style="
         background: #5e2da6;
         background: linear-gradient(330deg, #5e2da6 0%, #a366d3 55%, #decbef 100%);"></div>
       </div>
 
-      <section id="content-area">
+      <section id="content-area" class="del">
         <ul id="list">
           <li class="list-item-wrapper">
             <div class="list-item">과목명<input type="text" class="list-item-input">
