2021-1 Move sugang to Hongiksori

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
       </ul>
     </nav>
     <footer id="sidebarFooter">
-      © 2019-2020 HongikSugang<br>
+      © 2019-<span id="currentYear">2021</span> HongikSugang<br>
     </footer>
   </aside>
   <div id="sideOverlay"></div>
