--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </ul>
     </nav>
     <footer id="sidebarFooter">
-      © 2019-2020 HongikSugang<br>
+      © 2019-<span id="currentYear">2021</span> HongikSugang<br>
     </footer>
   </aside>
   <div id="sideOverlay"></div>
@@ -67,8 +67,7 @@
       </div>
       <div class="sectionBackground"></div>
     </section>
-
-    <section class="sectionWrapper">
+    <!-- <section class="sectionWrapper">
       <a href="/sugang/main" class="sectionLink"></a>
       <div class="sectionInfo">
         <header>
@@ -78,7 +77,7 @@
         <h5 class="sectionDate"></h5>
       </div>
       <div class="sectionBackground"></div>
-    </section>
+    </section> -->
     <section class="sectionWrapper">
       <a href="/sleepMore" class="sectionLink"></a>
       <div class="sectionInfo">
@@ -92,5 +91,4 @@
     </section>
   </main>
 </body>
-
 </html>
