--- a/moved.html
+++ b/moved.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>공지사항 - 홍익수강</title>
+  <title>이럴수가! - 홍익수강</title>
   <meta name="author" content="HongikSugang">
   <meta name="description" content="홍익수강 - 홍익대학교 수강신청 연습, 학교 지도">
   <meta name="theme-color" content="#C8AAE4">
@@ -57,38 +57,20 @@
     <article>
       <div id="articleInfo">
         <header>
-          <h1 id="headline">공지사항</h1>
+          <h1 id="headline" style="color: #3c2484">어머!</h1>
         </header>
+        <!-- <div id="AboutImage" style="background-color: #c8aae4;"></div> -->
         <div id="AboutImage" style="
-        background: #3c2484;
-        background: linear-gradient(25deg, #3c2484 0%, #a366d3 60%, #c8aae4 100%);
+        background: #decbef;
+        background: linear-gradient(20deg, #decbef 0%, #c8aae4 55%, #a366d3 100%);
       "></div>
       </div>
 
       <section>
-        <h2>홍익수강</h2>
-        <p>
-          홍익수강은 홍익대학교의 공식 웹사이트가 아닙니다. 실제 수강신청 페이지와 다를 수 있습니다. 이로 인해 발생하는 모든 일에 제작자는 책임지지 않습니다. <br>
-          "크롬" 브라우저 이용을 권장드립니다. <br>
-          모든 종류의 피드백을 환영합니다. 피드백을 <a href="mailto:hongiksugang@gmail.com">hongiksugang@gmail.com</a> 으로 보내주세요.
-        </p>
-        <h2>수강신청 연습</h2>
-        <p>
-          수강신청 연습 페이지는 2월과 8월에 이용 가능합니다.
-          모든 학생은 듣고 싶은 수업을 들을 수 있어야 합니다. 이 페이지가 없어져도 될 만큼 홍익대학교가 충분히 수업 개설을 하길 바랍니다.
-        </p>
-        <h2>학교 지도</h2>
-        <p>
-          2011년 홍익대학교 시각디자인과 RRRproject에서 만든 "홍그와트 지도"를 참고하여 만들었습니다. <br>
-          실제와 다를 수 있습니다. 다른 부분을 발견하신다면 이메일을 보내주세요.
-        </p>
-        <h2>PC실</h2>
-        <p>실제 PC실 정보와 다를 수 있습니다. 다른 부분을 발견하신다면 이메일을 보내주세요.</p>
+        <p>이제 홍익수강 대신 <a target="_blank" rel="noopener noreferrer" href="https://hongiksori.com">홍익소리</a>에서 수강신청 연습을 할 수 있어요.</p>
       </section>
     </article>
   </main>
-
-  <script src="/cssjs/mainApp.js"></script>
 </body>
 
 </html>
