--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <div class="sectionBackground"></div>
     </section>
-    <!-- <section class="sectionWrapper">
+    <section class="sectionWrapper">
       <a href="/sugang/main" class="sectionLink"></a>
       <div class="sectionInfo">
         <header>
@@ -77,7 +77,7 @@
         <h5 class="sectionDate"></h5>
       </div>
       <div class="sectionBackground"></div>
-    </section> -->
+    </section>
     <section class="sectionWrapper">
       <a href="/sleepMore" class="sectionLink"></a>
       <div class="sectionInfo">
