--- a/sugang/click.html
+++ b/sugang/click.html
@@ -22,7 +22,6 @@
     {
       const month = new Date().getMonth()
       if (month != 1 && month != 7) location.replace("/notyet")
-      location.replace("/moved")
     }
     window.dataLayer = window.dataLayer || []
     function gtag() { dataLayer.push(arguments) }
@@ -32,7 +31,7 @@
   </script>
 </head>
 
-<body>
+<body id="sugang">
 
   <table width="100%" height="100%" border="0" cellpadding="0" cellspacing="0">
     <tr>
@@ -41,7 +40,7 @@
           <tr>
             <td height=53 style='padding-left:10px;'>
               <a href="./main"><span style='font-size:17px;'><b>홍익대학교 수강신청 연습</b></span></a>
-              <a href="/" id="logo"></a>
+              <a href="/" id="sugang-logo"></a>
             </td>
           </tr>
           <tr height=25 bgcolor="#c8aae4">
