Edit sugang notice message

--- a/sugang/main.html
+++ b/sugang/main.html
@@ -63,7 +63,7 @@
       <article>
         <div id="articleInfo">
           <header>
-            <h1 id="headline" style="color: #3c2484">어머!</h1>
+            <h1 id="headline" style="color: #3c2484">잠깐!</h1>
           </header>
           <!-- <div id="AboutImage" style="background-color: #c8aae4;"></div> -->
           <div id="AboutImage" style="
@@ -76,7 +76,7 @@
           <p>
             이제 <a target="_blank" rel="noopener noreferrer" href="https://hongiksori.com">홍익소리</a>에서 수강신청 연습을 할
             수 있어요. <br>
-            홍익소리 이용에 문제가 있는 경우 <a href="" id="go-button">여기</a>를 눌러 계속하세요
+            홍익소리 이용에 문제가 있거나 세종캠퍼스 학생, 학번이 나오지 않은 신입생인 경우 <a href="" id="go-button">여기</a>를 눌러 수강신청 연습을 할 수 있어요.
           </p>
         </section>
       </article>
