--- a/sugang/main.html
+++ b/sugang/main.html
@@ -35,54 +35,7 @@
 </head>
 
 <body>
-  <div id="moved">
-    <input type="checkbox" id="toggleMenu">
-    <nav id="topNav">
-      <a href="/" id="logo"></a>
-      <label id="toggleSidebar" for="toggleMenu">
-        <span class="wrap"><span class="line"></span></span>
-        <span class="wrap"><span class="line"></span></span>
-      </label>
-    </nav>
-
-    <aside id="sidebar">
-      <nav id="sideNav">
-        <ul id="sidebarMenu">
-          <li><a href="/map">Map</a></li>
-          <li><a href="/pc">PC실</a></li>
-          <li><a href="/about">About</a></li>
-        </ul>
-      </nav>
-      <footer id="sidebarFooter">
-        © 2019-<span id="currentYear">2021</span> HongikSugang<br>
-      </footer>
-    </aside>
-    <div id="sideOverlay"></div>
-
-    <main>
-      <article>
-        <div id="articleInfo">
-          <header>
-            <h1 id="headline" style="color: #3c2484">잠깐!</h1>
-          </header>
-          <!-- <div id="AboutImage" style="background-color: #c8aae4;"></div> -->
-          <div id="AboutImage" style="
-        background: #decbef;
-        background: linear-gradient(20deg, #decbef 0%, #c8aae4 55%, #a366d3 100%);
-      "></div>
-        </div>
-
-        <section>
-          <p>
-            이제 <a target="_blank" rel="noopener noreferrer" href="https://hongiksori.com">홍익소리</a>에서 수강신청 연습을 할
-            수 있어요. <br>
-            홍익소리 이용에 문제가 있거나 세종캠퍼스 학생, 학번이 나오지 않은 신입생인 경우 <a href="" id="go-button">여기</a>를 눌러 수강신청 연습을 할 수 있어요.
-          </p>
-        </section>
-      </article>
-    </main>
-  </div>
-  <table id="sugang" class="display-none" width="100%" height="100%" border="0" cellpadding="0" cellspacing="0">
+  <table id="sugang" width="100%" height="100%" border="0" cellpadding="0" cellspacing="0">
     <tr>
       <td valign=top>
         <table cellspacing="0" cellpadding="0" border="0" width=100%>
