--- a/sugang/click.html
+++ b/sugang/click.html
@@ -13,7 +13,8 @@
   <meta property="og:image" content="/image/hongiksugang.png">
   <meta property="og:url" content="https://hongiksugang.github.io">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
-  <link href="/cssjs/sugang.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="/cssjs/mainStyle.css">
+  <link rel="stylesheet" href="/cssjs/sugang.css" rel="stylesheet" type="text/css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script data-ad-client="ca-pub-9909010355156782" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146466073-1"></script>
@@ -64,14 +65,15 @@
           <tr>
             <td width="180" valign="top" bgcolor="#f9f9f9">
 
-              <!-- Left Start //-->
+              <!-- Left Start -->
 
-              <table width="180" height="135" border="0" cellpadding="0" cellspacing="0" border=0>
+
+              <table width="200" height="135" border="0" cellpadding="0" cellspacing="0" border=0>
                 <tr height="90">
                   <td height="25" style='padding-left:5px'>
-                    <div class="top">연습대학</div>
-                    <div class="top">수강신청전공 1학년</div>
-                    <div class="top">올클러(C036225)</div>
+                    <div class="top">올클러님 환영합니다</div>
+                    <div class="top" style="margin-top:10px;"><b>최근접속: </b><span id="loginTime">2019/08/24 07:00:18</span> </div>
+
                   </td>
                 </tr>
                 <tr height="44">
@@ -86,16 +88,18 @@
               </table>
 
 
+
+
               <!-- Left Menu Start -->
-              <table width="180" border="0" align="left" valign="top" cellpadding="0" cellspacing="0" border=0
+              <table width="200" border="0" align="left" valign="top" cellpadding="0" cellspacing="0" border=0
                 bgcolor="#f9f9f9">
                 <tr valign=top>
                   <td>
-                    <table width="170" border="0" align="center" cellpadding="0" cellspacing="0">
+                    <table width="180" border="0" align="center" cellpadding="0" cellspacing="0">
 
                       <tr align=left>
                         <td height=30>
-                          <li><span class="failed">공지사항</span></li>
+                          <li><span class="failed" style="margin-left:-8px;">공지사항</span></li>
                         </td>
                       </tr>
                       <tr>
@@ -104,12 +108,27 @@
                       <tr>
                         <td height=1 bgcolor=#FFFFFF></td>
                       </tr>
+
+
+
+
                       <tr align=left>
                         <td height=30>
-                          <li><span class="failed">
+                          <li>
+                            <span class="failed" style="margin-left:-8px;">
                               <font color=red>과목별 수강신청</font>
-                            </span></li>
+                            </span>
+                          </li>
                         </td>
+                      </tr>
+
+
+                      <tr><td height=1 bgcolor=#E1E1E1></td></tr>
+                      <tr><td height=1 bgcolor=#FFFFFF></td></tr>
+                      <tr align=left>
+                          <td height=30>
+                          <li><span class="failed" style="margin-left:-8px;">바이오헬스 공유대학 수강신청</li>
+                          </td>
                       </tr>
                       <tr>
                         <td height=1 bgcolor=#E1E1E1></td>
@@ -119,7 +138,7 @@
                       </tr>
                       <tr align=left>
                         <td height=30>
-                          <li>수강할 과목 미리 담아두기</li>
+                          <li><span style="margin-left:-8px;">수강할 과목 미리 담아두기</span></li>
                         </td>
                       </tr>
                       <tr>
@@ -154,7 +173,7 @@
 
                       <tr align=left>
                         <td height=30>
-                          <span class="failed">&nbsp;&nbsp;- 담은 과목 삭제하기</span>
+                          <span class="failed">&nbsp;&nbsp;- 담은 과목 삭제하기</a>
                         </td>
                       </tr>
                       <tr>
@@ -177,23 +196,9 @@
                       </tr>
                       <tr align=left>
                         <td height=30>
-                          <li><span class="failed">
-                              <font color=red>수강신청 철회하기</font>
-                            </span></li>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td height=1 bgcolor=#E1E1E1></td>
-                      </tr>
-                      <tr>
-                        <td height=1 bgcolor=#FFFFFF></td>
-                      </tr>
-
-                      <tr align=left>
-                        <td height=30>
                           <li>
-                            <span class="failed">
-                              <font color=red>수강신청 전체 현황 보기</font>
+                            <span class="failed" style="margin-left:-8px;">
+                              <font color=red>수강신청 철회하기</font>
                             </span>
                           </li>
                         </td>
@@ -204,10 +209,20 @@
                       <tr>
                         <td height=1 bgcolor=#FFFFFF></td>
                       </tr>
-
                       <tr align=left>
                         <td height=30>
-                          ----------------------------
+                        <li><span class="failed" style="margin-left:-8px;"><font color=red>폐강과목 수강정정</font></span></li>
+                        </td>
+                    </tr>
+                    <tr><td height=1 bgcolor=#E1E1E1></td></tr>
+                    <tr><td height=1 bgcolor=#FFFFFF></td></tr>
+                      <tr align=left>
+                        <td height=30>
+                          <li>
+                            <span class="failed" style="margin-left:-8px;">
+                              <font color=red>수강신청 전체 현황 보기</font>
+                            </span>
+                          </li>
                         </td>
                       </tr>
                       <tr>
@@ -225,7 +240,7 @@
                 </tr>
               </table>
               <!-- Left Menu End -->
-              <!-- Left End //-->
+              <!-- Left End -->
             </td>
 
             <td width=1 bgcolor=#E1E1E1></td>
