--- a/sugang/main.html
+++ b/sugang/main.html
@@ -13,8 +13,8 @@
   <meta property="og:image" content="/image/hongiksugang.png">
   <meta property="og:url" content="https://hongiksugang.github.io">
   <link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/cssjs/sugang.css" type="text/css">
   <link rel="stylesheet" href="/cssjs/mainStyle.css">
+  <link rel="stylesheet" href="/cssjs/sugang.css" type="text/css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script data-ad-client="ca-pub-9909010355156782" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -41,7 +41,7 @@
         <table cellspacing="0" cellpadding="0" border="0" width=100%>
           <tr>
             <td height=53 style='padding-left:10px;'>
-              <a href="./sugang"><span style='font-size:17px;'><b>홍익대학교 수강신청 연습</b></span></a>
+              <a href="./main"><span style='font-size:17px;'><b>홍익대학교 수강신청 연습</b></span></a>
               <a href="/" id="sugang-logo"></a>
             </td>
           </tr>
@@ -91,15 +91,15 @@
 
 
               <!-- Left Menu Start -->
-              <table width="180" border="0" align="left" valign="top" cellpadding="0" cellspacing="0" border=0
+              <table width="200" border="0" align="left" valign="top" cellpadding="0" cellspacing="0" border=0
                 bgcolor="#f9f9f9">
                 <tr valign=top>
                   <td>
-                    <table width="170" border="0" align="center" cellpadding="0" cellspacing="0">
+                    <table width="180" border="0" align="center" cellpadding="0" cellspacing="0">
 
                       <tr align=left>
                         <td height=30>
-                          <li><span class="failed">공지사항</span></li>
+                          <li><span class="failed" style="margin-left:-8px;">공지사항</span></li>
                         </td>
                       </tr>
                       <tr>
@@ -115,7 +115,7 @@
                       <tr align=left>
                         <td height=30>
                           <li>
-                            <span class="failed">
+                            <span class="failed" style="margin-left:-8px;">
                               <font color=red>과목별 수강신청</font>
                             </span>
                           </li>
@@ -123,6 +123,13 @@
                       </tr>
 
 
+                      <tr><td height=1 bgcolor=#E1E1E1></td></tr>
+                      <tr><td height=1 bgcolor=#FFFFFF></td></tr>
+                      <tr align=left>
+                          <td height=30>
+                          <li><span class="failed" style="margin-left:-8px;">바이오헬스 공유대학 수강신청</li>
+                          </td>
+                      </tr>
                       <tr>
                         <td height=1 bgcolor=#E1E1E1></td>
                       </tr>
@@ -131,7 +138,7 @@
                       </tr>
                       <tr align=left>
                         <td height=30>
-                          <li>수강할 과목 미리 담아두기</li>
+                          <li><span style="margin-left:-8px;">수강할 과목 미리 담아두기</span></li>
                         </td>
                       </tr>
                       <tr>
@@ -190,7 +197,7 @@
                       <tr align=left>
                         <td height=30>
                           <li>
-                            <span class="failed">
+                            <span class="failed" style="margin-left:-8px;">
                               <font color=red>수강신청 철회하기</font>
                             </span>
                           </li>
@@ -202,26 +209,20 @@
                       <tr>
                         <td height=1 bgcolor=#FFFFFF></td>
                       </tr>
-
+                      <tr align=left>
+                        <td height=30>
+                        <li><span class="failed" style="margin-left:-8px;"><font color=red>폐강과목 수강정정</font></span></li>
+                        </td>
+                    </tr>
+                    <tr><td height=1 bgcolor=#E1E1E1></td></tr>
+                    <tr><td height=1 bgcolor=#FFFFFF></td></tr>
                       <tr align=left>
                         <td height=30>
                           <li>
-                            <span class="failed">
+                            <span class="failed" style="margin-left:-8px;">
                               <font color=red>수강신청 전체 현황 보기</font>
                             </span>
                           </li>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td height=1 bgcolor=#E1E1E1></td>
-                      </tr>
-                      <tr>
-                        <td height=1 bgcolor=#FFFFFF></td>
-                      </tr>
-
-                      <tr align=left>
-                        <td height=30>
-                          ----------------------------
                         </td>
                       </tr>
                       <tr>
@@ -287,8 +288,9 @@
 
                       <TABLE width=660 border='0' cellpadding='0' cellspacing='0'>
                         <TR height=50 bgcolor='#eeeeee'>
-                          <TH colspan=2>
-                            <h3 style="font-size:12px; color:blue;">[이용 방법]</h3>
+                          <TH colspan=3>
+                            <h1 style="font-size: 30; color: #a366d3">이곳은 수강신청 페이지가 <span style="color:#ff3b30">아닙니다</span></h1>
+                            <h2 style="font-size:12px; color:blue;">[이용 방법]</h2>
                             <p class="sugang">
                               1. 화면 왼쪽 "담은 과목 수강신청하기" 클릭 <br>
                               2. 표 아래 "수강신청" 버튼 클릭 <br><br>
