--- a/readme.html
+++ b/readme.html
@@ -70,7 +70,7 @@
         <p>
           홍익수강은 홍익대학교의 공식 웹사이트가 아닙니다. 실제 수강신청 페이지와 다를 수 있습니다. 이로 인해 발생하는 모든 일에 제작자는 책임지지 않습니다. <br>
           "크롬" 브라우저 이용을 권장드립니다. <br>
-          모든 종류의 피드백을 환영합니다. 피드백을 <a href="mailto:hongiksugang@gmail.com">hongiksugang@gmail.com</a> 으로 보내주세요.
+          모든 종류의 피드백을 환영합니다. 피드백을 <a href="mailto:hongiksori@gmail.com">hongiksori@gmail.com</a> 으로 보내주세요.
         </p>
         <h2>수강신청 연습</h2>
         <p>
