feat: Redirect sugang, map

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
   <aside id="sidebar">
     <nav id="sideNav">
       <ul id="sidebarMenu">
-        <li><a href="/map">Map</a></li>
         <li><a href="/pc">PC실</a></li>
         <li><a href="/about" class="asdf">About</a></li>
       </ul>
@@ -68,7 +67,7 @@
       <div class="sectionBackground"></div>
     </section>
     <section class="sectionWrapper">
-      <a href="/sugang/main" class="sectionLink"></a>
+      <a href="https://sugang.hongiksori.com" class="sectionLink"></a>
       <div class="sectionInfo">
         <header>
           <h1 class="headline">수강신청 연습</h1>
@@ -79,10 +78,10 @@
       <div class="sectionBackground"></div>
     </section>
     <section class="sectionWrapper">
-      <a href="/sleepMore" class="sectionLink"></a>
+      <a href="https://map.hongiksori.com" class="sectionLink"></a>
       <div class="sectionInfo">
         <header>
-          <h1 class="headline">강의실 바로가기</h1>
+          <h1 class="headline">학교 지도</h1>
           <h2 class="subhead"></h2>
         </header>
         <h5 class="sectionDate"></h5>
