--- a/readme.html
+++ b/readme.html
@@ -42,7 +42,6 @@
   <aside id="sidebar">
     <nav id="sideNav">
       <ul id="sidebarMenu">
-        <li><a href="/map">Map</a></li>
         <li><a href="/pc">PC실</a></li>
         <li><a href="/about">About</a></li>
       </ul>
@@ -75,7 +74,8 @@
         <h2>수강신청 연습</h2>
         <p>
           수강신청 연습 페이지는 2월과 8월에 이용 가능합니다.
-          모든 학생은 듣고 싶은 수업을 들을 수 있어야 합니다. 이 페이지가 없어져도 될 만큼 홍익대학교가 충분히 수업 개설을 하길 바랍니다.
+          모든 학생은 듣고 싶은 수업을 들을 수 있어야 합니다. 이 페이지가 없어져도 될 만큼 홍익대학교가 충분히 수업 개설을 하길 바랍니다. <br>
+          <b>실제 수강신청 사이트와 버튼 위치가 약간 다릅니다.</b>
         </p>
         <h2>학교 지도</h2>
         <p>
